--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@
 # ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 # OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
-PROJECT(YetAnotherJSONParser C)
+PROJECT(YetAnotherJSONParser VERSION 2.1.0 LANGUAGES C)
 
 SET (YAJL_MAJOR 2)
 SET (YAJL_MINOR 1)
